[gd_scene load_steps=17 format=2]

[ext_resource path="res://Artes/UI/item holder.png" type="Texture" id=1]
[ext_resource path="res://Artes/Itens/Item1.png" type="Texture" id=2]
[ext_resource path="res://Artes/Itens/Item2.png" type="Texture" id=3]
[ext_resource path="res://Artes/Itens/Item4.png" type="Texture" id=4]
[ext_resource path="res://Artes/Itens/Item3.png" type="Texture" id=5]
[ext_resource path="res://Codigos/ItemUi.gd" type="Script" id=6]
[ext_resource path="res://Artes/UI/TimerShow.png" type="Texture" id=7]
[ext_resource path="res://Fontes/dogicapixel.ttf" type="DynamicFontData" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=8]
light_mode = 1

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item holder" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 192, 180 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Item1" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 119, 180 )
texture = ExtResource( 4 )

[node name="Item2" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
position = Vector2( 168, 180 )
texture = ExtResource( 2 )

[node name="Item3" type="Sprite" parent="."]
visible = false
material = SubResource( 4 )
position = Vector2( 216, 180 )
texture = ExtResource( 3 )

[node name="Item4" type="Sprite" parent="."]
visible = false
material = SubResource( 5 )
position = Vector2( 264, 180 )
texture = ExtResource( 5 )

[node name="TimerShow" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 343, 24 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="TimerShow"]
material = SubResource( 8 )
margin_left = -21.0
margin_top = -7.0
margin_right = 17.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 6 )
text = "5:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
